UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Product_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted_ASP__c</fullName>
        <label>Budgeted ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Pack__c</fullName>
        <label>Case Pack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Exps__c</fullName>
        <label>Comm. Exps %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compare_to_Brand_Name__c</fullName>
        <label>Compare to (Brand Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Management_Fee_Wholesaler__c</fullName>
        <label>Contract Management Fee (Wholesaler) %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Price__c</fullName>
        <label>Contract Price(Pharmabid)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Product Opportunity</relationshipLabel>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Admin_Fee__c</fullName>
        <label>Current Admin Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Indirect_Price__c</fullName>
        <label>Current Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Indirect_Selling_Unit__c</fullName>
        <label>Current Indirect Selling Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Indirect_Selling_Units__c</fullName>
        <label>Current Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Rebate__c</fullName>
        <label>Current Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Retail_Direct_Units__c</fullName>
        <label>Current Retail Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Retail_Indirect_Units__c</fullName>
        <label>Current Retail Indirect Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_RDC_NLC__c</fullName>
        <label>Customer RDC/NLC %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Order_Price__c</fullName>
        <label>Direct Order Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dosage_Form__c</fullName>
        <inlineHelpText>Examples: Capsule, Tablet, etc.: SAP field</inlineHelpText>
        <label>Dosage Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bags</fullName>
                </value>
                <value>
                    <fullName>Bliter</fullName>
                </value>
                <value>
                    <fullName>Capsules</fullName>
                </value>
                <value>
                    <fullName>Cream</fullName>
                </value>
                <value>
                    <fullName>Granules</fullName>
                </value>
                <value>
                    <fullName>Injectable</fullName>
                </value>
                <value>
                    <fullName>Oral Suspension</fullName>
                </value>
                <value>
                    <fullName>Patch</fullName>
                </value>
                <value>
                    <fullName>Pump</fullName>
                </value>
                <value>
                    <fullName>Respulse</fullName>
                </value>
                <value>
                    <fullName>Solution / Ampulse</fullName>
                </value>
                <value>
                    <fullName>Sublingual Film</fullName>
                </value>
                <value>
                    <fullName>Suspensions / Drop</fullName>
                </value>
                <value>
                    <fullName>Tablets</fullName>
                </value>
                <value>
                    <fullName>Single Dose Vial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Medicaid_Returns__c</fullName>
        <label>Estimated Medicaid &amp; Returns</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_G_N__c</fullName>
        <label>Fee (G/N)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Exclusion_Customers__c</fullName>
        <label>Final Exclusion Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GCN_Generic_Code_Number__c</fullName>
        <label>GCN (Generic Code Number)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Product Opportunity</relationshipLabel>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPI_Generic_Product_Identifier__c</fullName>
        <label>GPI (Generic Product Identifier)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSN__c</fullName>
        <label>GSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidance_Price__c</fullName>
        <label>Guidance Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMS_Market_Share__c</fullName>
        <label>IMS Market Share</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPA_Floor_Price__c</fullName>
        <label>IPA Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indirect_CD__c</fullName>
        <label>Indirect CD %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_GCN_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GCN Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GCN_Pack_Size_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GCN Pack Size Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GPI_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GPI Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GPI_Pack_Size_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GPI Pack Size Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GSN_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GSN Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GSN_Pack_Size_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GSN Pack Size Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NDC_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is NDC Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SKU_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SKU Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Estimate__c</fullName>
        <label>LE Price Per Pack (Qtr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Listing_Price__c</fullName>
        <label>Listing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_VIP__c</fullName>
        <label>Local VIP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lowest_Price_SKU__c</fullName>
        <label>Lowest Price /SKU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOQ__c</fullName>
        <label>MOQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Share_Expansion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Share Expansion</label>
        <referenceTo>Vision_Market_Share_Expansion__c</referenceTo>
        <relationshipLabel>Product Opportunity</relationshipLabel>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Min_profit_share_Partner_1__c</fullName>
        <label>Min profit share - Partner 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_profit_share_Partner_2__c</fullName>
        <label>Min profit share - Partner 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDC_11__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC_Without_Dashes__c</fullName>
        <label>NDC Without Dashes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Opportunity</relationshipLabel>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orange_Book_Rating__c</fullName>
        <label>Orange Book Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Partner_1_Percent__c</fullName>
        <label>PS % - Partner 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PS_Partner_1__c</fullName>
        <label>PS Partner 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Partner_2_Percent__c</fullName>
        <label>PS % -Partner 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PS_Partner_2__c</fullName>
        <label>PS Partner 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pkg_Size__c</fullName>
        <label>Pkg Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Exclusion_Customers__c</fullName>
        <label>Primary Exclusion Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Grp_Exclusion_Customers__c</fullName>
        <label>Primary Grp Exclusion Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Director_Name__c</fullName>
        <label>Product Director Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Opportunity</relationshipLabel>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Contract_Bid_Price_Marketing__c</fullName>
        <label>Proposed Contract Bid Price (Marketing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Contract_Bid_Price_Sales__c</fullName>
        <label>Proposed Contract Bid Price (Sales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Current_Rebate__c</fullName>
        <label>Proposed Current Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposed_Direct_Selling_Unit__c</fullName>
        <label>Proposed Direct Selling Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Direct_Selling_Units__c</fullName>
        <label>Proposed Direct Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Indirect_Selling_Unit__c</fullName>
        <label>Proposed Indirect Selling Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Indirect_Selling_Units__c</fullName>
        <label>Proposed Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_G_N__c</fullName>
        <label>Rebate (G/N)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Royalty_Partner_Name__c</fullName>
        <label>Royalty Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Royalty_Percent__c</fullName>
        <label>Royalty %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rx_SRx_OTC__c</fullName>
        <label>Rx/SRx/OTC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU_Number__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>SKU Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Notes__c</fullName>
        <label>Sales Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secondary_Backup_Exclusion_Customers__c</fullName>
        <label>Secondary/Backup Exclusion Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Backup_Grp_Exclusion_Customers__c</fullName>
        <label>Secondary/Backup Grp Exclusion Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Match Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Unmatched</fullName>
                </value>
                <value>
                    <fullName>Discrepant</fullName>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Throughput_Cost__c</fullName>
        <label>Throughput Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Universal_Product_Code__c</fullName>
        <label>UPC (Universal Product Code)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_3Months_Annual_Qty__c</fullName>
        <label>3Months Annual Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Alt_Pkg_Size__c</fullName>
        <inlineHelpText>If Pack Size (given from user) is not matched and BID ON HIGHEST PACK SIZE is True
we will CHOSE NEAREST PACK SIZE for the line item</inlineHelpText>
        <label>Alternative Pkg Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Annual_OS_Units__c</fullName>
        <label>Annual OS Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Annual_RAD_Units__c</fullName>
        <label>Annual RAD Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Annual_Wmt_Units__c</fullName>
        <label>Annual Wmt Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Product Opportunity</relationshipLabel>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Bid_Type__c</fullName>
        <label>Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFP Bids</fullName>
                </value>
                <value>
                    <fullName>Product Addition</fullName>
                </value>
                <value>
                    <fullName>New Product Launch</fullName>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
                <value>
                    <fullName>Volume Review</fullName>
                </value>
                <value>
                    <fullName>Customer Rebate Change</fullName>
                </value>
                <value>
                    <fullName>Short Dated OTB</fullName>
                </value>
                <value>
                    <fullName>Good Dated OTB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Product Opportunity</relationshipLabel>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Bid_on_Alternative_Pack_Size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid on Alternative Pack Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Bid_on_Highest_Pack_Size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid on Highest Pack Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Bright_Delete_Comments__c</fullName>
        <label>Bright Delete Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Comments__c</fullName>
        <label>Vision Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Anda_Units__c</fullName>
        <label>Current Anda Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Current_AutoSub_Units__c</fullName>
        <label>Current AutoSub Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Current_BASE_Units__c</fullName>
        <label>Current_BASE_Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Current_DSH_Units__c</fullName>
        <label>Current DSH Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Direct_Price__c</fullName>
        <label>Current Direct Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Direct_Units__c</fullName>
        <label>Current Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Indirect_Price__c</fullName>
        <label>Current Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Current_OS_Units__c</fullName>
        <label>Current OS Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Current_RAD_units__c</fullName>
        <label>Current RAD units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Current_WMT_Units__c</fullName>
        <label>Current WMT Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Wholesaler_Units__c</fullName>
        <label>Current Wholesaler Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Disc_Pkg_Size__c</fullName>
        <label>Disc Pkg Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Dosage_Form__c</fullName>
        <inlineHelpText>This Field Stores values which are not matched with Dosage Form Picklist</inlineHelpText>
        <label>Vision Dosage Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Dropped_Comments__c</fullName>
        <label>Dropped Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Financial_Impact__c</fullName>
        <label>Financial Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Guidance_Price__c</fullName>
        <label>Guidance Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_High_Pkg_Size__c</fullName>
        <inlineHelpText>If Pack Size (given from user) is not matched and BID ON HIGHEST PACK SIZE is True
we will select highest pack size for the line item</inlineHelpText>
        <label>High Pkg Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Incumbent_Competitor_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent Competitor Info</label>
        <referenceTo>Competitor_Info__c</referenceTo>
        <relationshipLabel>Product Opportunity</relationshipLabel>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Incumbent_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Product Opportunity</relationshipLabel>
        <relationshipName>Product_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Is_GCN_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GCN Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_GPI_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GPI Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_GSN_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GSN Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_NDC_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is NDC Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Pack_Size_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pack Size Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_SKU_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SKU Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Number_Items__c</fullName>
        <label>Number Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Opportunity_Value__c</fullName>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Panorama_Target_Price__c</fullName>
        <label>Panorama Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Pills__c</fullName>
        <label>Pills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Price_Range__c</fullName>
        <label>Price Range</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Source__c</fullName>
        <label>Product Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity Product</fullName>
                    <default>true</default>
                    <label>Opportunity Product</label>
                </value>
                <value>
                    <fullName>Panorama Moves</fullName>
                </value>
                <value>
                    <fullName>100% Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Product_Target_Date__c</fullName>
        <description>This field is used to NoBids Opportunity Notification</description>
        <label>Vision Product Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Anda_Units__c</fullName>
        <label>Proposed Anda Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_AutoSub_Units__c</fullName>
        <label>Proposed AutoSub Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_BASE_Units__c</fullName>
        <label>Proposed BASE Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_CVS_Direct_Units__c</fullName>
        <label>Proposed CVS Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_CVS_Indirect_Units__c</fullName>
        <label>Proposed CVS Indirect Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Cardinal_Units__c</fullName>
        <label>Proposed Cardinal Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_DSH_Units__c</fullName>
        <label>Proposed DSH Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_DirectAholdDelhaizeUnits__c</fullName>
        <label>Proposed Direct Ahold/Delhaize Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Accerodo_Units__c</fullName>
        <label>Proposed Direct Accerodo Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Cigna_Units__c</fullName>
        <label>Proposed Direct Cigna Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Cordant_Units__c</fullName>
        <label>Proposed Direct Cordant Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_ESI_Units__c</fullName>
        <label>Proposed Direct ESI Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Gaint_Eagle_Units__c</fullName>
        <label>Proposed Direct Gaint Eagle Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Kroger_Units__c</fullName>
        <label>Proposed Direct Kroger Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>